--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "build-url": "^1.0.10",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "flux": "^3.1.3",
+    "gh-pages": "^1.1.0",
     "moment": "^2.20.1",
-    "query-string": "^5.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.0",
@@ -18,6 +19,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "deploy": "gh-pages -b master -d build",
     "eject": "react-scripts eject"
   }
 }
